@@ -4,20 +4,21 @@
 -XX:ReservedCodeCacheSize=512m
 -XX:+UseConcMarkSweepGC
 -XX:SoftRefLRUPolicyMSPerMB=50
+-ea
 -XX:+TieredCompilation
--XX:-TraceClassUnloading
--XX:CMSIncrementalDutyCycleMin=0
--XX:+CMSIncrementalPacing
--XX:+CMSIncrementalMode
 -XX:+CMSClassUnloadingEnabled
 -XX:+AggressiveOpts
 -XX:+UseCodeCacheFlushing
 -XX:+UseCompressedOops
--ea
--Dsun.io.useCanonCaches=false
+-XX:CICompilerCount=2
+-Dsun.io.useCanonPrefixCache=false
 -Djava.net.preferIPv4Stack=true
+-Djdk.http.auth.tunneling.disabledSchemes=""
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:-OmitStackTraceInFastThrow
+-Djdk.attach.allowAttachSelf
+-Dkotlinx.coroutines.debug=off
+-Djdk.module.illegalAccess.silent=true
 -Dawt.useSystemAAFontSettings=lcd
 -Dsun.java2d.renderer=sun.java2d.marlin.MarlinRenderingEngine
--Dawt.useSystemAAFontSettings=lcd
+-Dsun.tools.attach.tmp.only=true
